# animeface-gan

./: .gitignore  README.md  main.py  pyproject.toml
conf/: config.yaml
conf/dataset/: animeface128.yaml
conf/eval/: default.yaml
conf/logger/: wandb.yaml
conf/model/: dcgan.yaml
conf/sweeps/: dcgan.yaml
conf/trainer/: default.yaml
scripts/: eval.py  sweep.sh  train_debug.sh
src/anime_gan/: __init__.py  train.py
src/anime_gan/data/: datamodule.py
src/anime_gan/lit/: dcgan_module.py
src/anime_gan/models/: dcgan.py
src/anime_gan/utils/: callbacks.py  images.py  metrics.py  paths.py  seed.py
